--- a/style.css
+++ b/style.css
@@ -4,14 +4,10 @@
     background: linear-gradient(60deg, #280137, #000000);
 }
 body{
-    height: 100%;
-    position: fixed;
-    overflow-y: scroll;
-    -webkit-overflow-scrolling: touch;
     width: 100%;
     margin: 0;
     color: white;
-    background: linear-gradient(60deg, #280137, #000000);
+    background: #0000;
 }
 .noto-sans{
     font-family: "Noto Sans", serif;
