Bug fix style.css

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 #html{
     width: 100%;
-    overflow: hidden;
+    overflow-x: hidden;
     background: linear-gradient(60deg, #280137, #000000);
 }
 body{
@@ -560,6 +560,7 @@ body{
 }
 .side-btn{
     display: none;
+    cursor: pointer;
 }
 .side-menu{
     position: fixed;
